ToonShaderの追加と設定

--- a/Shader241114.vcxproj.filters
+++ b/Shader241114.vcxproj.filters
@@ -121,6 +121,9 @@
     <FxCompile Include="PointLight.hlsl">
       <Filter>ソース ファイル\Engine</Filter>
     </FxCompile>
+    <FxCompile Include="ToonShader.hlsl">
+      <Filter>ソース ファイル\Engine</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
